install react+webpack and make simple hompage

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
   <title>Jafar Aziz</title>
 </head>
 <body>
-  <div id="root">
-    <div id="top">YOU SEE</div>
-    <div id="bottom">NOTHING</div>
-  </div>
+  <div id="root"></div>
+  <script src="./bundle.js"></script>
 </body>
 </html>
